fixed description alignment

--- a/porfolio_react/src/App.css
+++ b/porfolio_react/src/App.css
@@ -55,3 +55,8 @@
 .imgHov {
   width: 100%;
 }
+.description {
+  text-align: center;
+  padding: 60px;
+  
+}
